frontend/test/should_pass/basic_019.grg
rule r {
	x : Node;
	y : Node;
	negative {
		x --> y;
	}

	modify {
		x;
	}
}

