frontend/test/should_fail/edge_002.grg
rule r {
	x:Node -e:ADEdge- y:Node;

	modify {
	}
}
